--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,20 +2,21 @@ body {
 	margin:0px;
 }
 
-text {
+/*text {
   font: 10px sans-serif;
-}
+}*/
 
 .tooltip {
   position: absolute;
   text-align: left;
   width: 100px;
   height: 50px;
-  padding: 8px;
+  padding: 5px;
   margin-top: -20px;
-  font: 20px sans-serif;
+  font: 12px sans-serif;
   background: #D6CE93;
   pointer-events: none;
+  opacity: 0.7;
 }
 
 
