--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,15 +10,14 @@ body {
   position: absolute;
   text-align: left;
   width: 100px;
-  height: 50px;
+  height: 40px;
   padding: 5px;
   margin-top: -20px;
-  font: 12px sans-serif;
-  background: #D6CE93;
+  font: 10px sans-serif;
+  background: #E7DEA3;
   pointer-events: none;
-  opacity: 0.7;
+  opacity: 0.6;
 }
-
 
 
 
