--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,7 +1,11 @@
 body {
 	margin:0px;
 }
-
+#plot{
+  width:100%;
+  height: 100%;
+  margin:5%;
+}
 /*text {
   font: 10px sans-serif;
 }*/
@@ -14,9 +18,9 @@ body {
   padding: 5px;
   margin-top: -20px;
   font: 10px sans-serif;
-  background: #E7DEA3;
+  background: #F7EEB3;
   pointer-events: none;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 
