--- a/stylesheets/plot.css
+++ b/stylesheets/plot.css
@@ -32,7 +32,7 @@ body {
     border: none;
     cursor: pointer;
     border-radius:2px;
-    margin:5px;s
+    margin:5px;
 }
 
 /* Dropdown button on hover & focus */
